# goit-PYTHON_WEB-hw-07

./: README.md  alembic.ini  connect_db.py  docker-compose.yml  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: aa65c1d66276_nit.py
